syntax = "proto3";
import "entity.proto";

package webitel.chat.service.facebookbot; 

service FacebookBotService {
  rpc MessageFromFlow(MessageFromFlowRequest) returns (MessageFromFlowResponse) {}
}

message MessageFromFlowRequest {
  string session_id = 1;
  int64 profile_id = 2;
  int64 conversation_id = 3;
  Message message = 4;
}

message MessageFromFlowResponse {}