syntax = "proto3";
import "entity.proto";

package webitel.chat.service.storage; 

service StorageService {
  rpc ProcessMessage(ProcessMessageRequest) returns (ProcessMessageResponse) {}
  rpc GetConversationByID(GetConversationByIDRequest) returns (GetConversationByIDResponse) {}
  rpc GetProfileByID(GetProfileByIDRequest) returns (GetProfileByIDResponse) {}
  rpc GetProfiles(GetProfilesRequest) returns (GetProfilesResponse) {}
  rpc CloseConversation(CloseConversationRequest) returns (CloseConversationResponse) {}
  rpc SaveMessageFromFlow(SaveMessageFromFlowRequest) returns (SaveMessageFromFlowResponse) {}
}

message ProcessMessageRequest {
  string external_user_id = 1;
  string session_id = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
  string text = 6;
  int64 profile_id = 7;
  string number = 8;
}

message ProcessMessageResponse {
  bool created = 1;
  int64 conversation_id = 2;
}

message GetConversationByIDRequest {
  int64 conversation_id = 1;
}

message GetConversationByIDResponse {
  int64 id = 1;
  int64 profile_id = 2;
  string title = 3;
  string session_id = 4;
  Profile profile = 5;
}

message Profile {
  int64 id = 1;
  string name = 2;
  string type = 3;
  int64 domain_id = 4;
  map<string, string>  variables = 5;
}

message CloseConversationRequest {
  int64 conversation_id = 1;
}

message CloseConversationResponse {
}

message GetProfileByIDRequest {
  int64 profile_id = 1;
}

message GetProfileByIDResponse {
  Profile profile = 1;
}

message GetProfilesRequest {
  string type = 1;
}

message GetProfilesResponse {
  repeated Profile profiles = 1;
}

message SaveMessageFromFlowRequest {
    int64 conversation_id = 1;
    Message message = 2;
}

message SaveMessageFromFlowResponse {
    Error error = 1;
}